fix: remove extra padding

--- a/src/components/_cards/Project/Project.module.scss
+++ b/src/components/_cards/Project/Project.module.scss
@@ -41,7 +41,6 @@
       display: flex;
       flex-wrap: wrap;
       align-items: center;
-      margin-bottom: var(--spacing-md);
 
       .language {
         display: flex;
